# riscv-baremetal-hello-world

./: .gitignore  README.md  build.sh  main.c  meson.build  run.sh
cross/: cross.ini  riscv64-elf.ini
ld_script/: riscv64-elf.ld
src/: common.c  common.h  crt0.s  gpio.c  gpio.h  main.c  types.h
tools/: clean  compile  run  setup_meson
